--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  ditto_live: ^4.9.0
+  ditto_live: 4.9.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,7 +40,6 @@ dependencies:
   equatable: ^2.0.5
   permission_handler: ^11.3.1
   json_annotation: ^4.9.0
-  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
