--- a/react-native/package.json
+++ b/react-native/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -rf node_modules && yarn install && cd ios && rm -rf Podfile.lock && rm -rf Pods && pod install && cd .."
   },
   "dependencies": {
-    "@dittolive/ditto": "^4.10.0",
+    "@dittolive/ditto": "4.10.0",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-bouncy-checkbox": "^4.1.2"
