chore: add kotlin-multiplatform CI build (#145)
* chore: add kotlin-multiplatform CI build

This PR adds a build step to our PR checks to build the kotlin-multiplatform
project.

* Update .github/workflows/pr-checks.yml

Co-authored-by: Ben Chatelain <phatblat@users.noreply.github.com>

* Update .github/workflows/pr-checks.yml

Co-authored-by: Ben Chatelain <phatblat@users.noreply.github.com>

---------

Co-authored-by: Nicholas Robinson <nick.robinson@ditto.com>
Co-authored-by: Ben Chatelain <phatblat@users.noreply.github.com>

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -158,3 +158,34 @@ jobs:
           # Test that the app can show SDK version
           ./build/taskscpp --ditto-sdk-version
           echo "✅ SDK version command works"
+
+  kotlin-multiplatform:
+    name: Kotlin Multiplatform (ubuntu-24.04)
+    runs-on: ubuntu-24.04
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Create .env file
+        run: |
+          echo "DITTO_APP_ID=${{ secrets.DITTO_APP_ID }}" > .env
+          echo "DITTO_PLAYGROUND_TOKEN=${{ secrets.DITTO_PLAYGROUND_TOKEN }}" >> .env
+          echo "DITTO_AUTH_URL=${{ secrets.DITTO_AUTH_URL }}" >> .env
+          echo "DITTO_WEBSOCKET_URL=${{ secrets.DITTO_WEBSOCKET_URL }}" >> .env
+
+      - name: Build project
+        working-directory: kotlin-multiplatform
+        run: ./gradlew assemble
+
+      - name: Run tests
+        working-directory: kotlin-multiplatform
+        run: ./gradlew test
